Modernise AcidEffect: putIfAbsent and Math.clamp (S3824, S6885)
Replace containsKey+put with putIfAbsent for the wet-players guard.
Replace Math.max(0,Math.min(100,...)) with Math.clamp in both damage
percent calculations (rain and acid).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>